# restaurant-live-ordering

./: README.md  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.prod  pyproject.toml
backend/conf/: asgi.py  settings.py  urls.py
backend/kitchenapi/: admin.py  apps.py  consumers.py  models.py  routing.py  urls.py  views.py
backend/kitchenapi/management/commands/: populate_db.py
backend/kitchenapi/migrations/: 0001_initial.py  0002_remove_table_qr_code_alter_order_payment_method.py
frontend/: .dockerignore  Dockerfile  Dockerfile.prod  next.config.ts  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/[tableNumber]/: page.tsx
frontend/app/[tableNumber]/checkout/: page.tsx
frontend/app/[tableNumber]/order/[orderId]/: page.tsx
frontend/app/[tableNumber]/orders/: page.tsx
frontend/app/kitchen/: page.tsx
frontend/app/kitchen/login/: page.tsx
frontend/app/owner/: page.tsx
frontend/app/owner/login/: page.tsx
frontend/components/: auth-drawer.tsx  cart-drawer.tsx
frontend/lib/: api.ts  cart.ts  format.ts  kitchen.ts
frontend/types/: api.ts
nginx/: nginx.conf
