[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "channels[daphne]>=4.3.2",
    "django>=6.0.1",
    "django-cors-headers>=4.9.0",
    "django-environ>=0.12.0",
    "django-ninja>=1.5.3",
    "faker>=40.1.2",
    "pillow>=12.1.0",
    "pyjwt>=2.10.1",
    "redis>=7.1.0",
]
